force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>The description associated with the result that was assigned to the score card. This field is optional to include on the scorecard and is automatically populated based on the visual flow logic configuration.</description>
    <label>Result Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>