force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Flow_URL__c</fullName>
    <description>The URL link to take you to the flow which was run to generate the scorecard. This field is linked to the version number. And the field name will not be visible on the scorecard, but the URL will be linked to the version number value displayed on the scorecard.</description>
    <label>Flow URL</label>
    <type>Url</type>
</CustomField>