force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated, and linked the scorecard to the loan it was run from. This field is used to look up the loan record. This field will not populate on the scorecard but will link the scorecard to the loan it is decisioning.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Scorecards</relationshipLabel>
    <relationshipName>Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>