force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Result__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Result__c</fullName>
    <description>The overall result of the decision. This field is automatically displayed and conditionally rendered based on the configuration set in the Visual Flow Logic. This result will also populate to the loan wall, for additional workflow and configuration options. The results are configurable and controlled through the Visual Flow Logic.</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recommend Approval</fullName>
            </value>
            <value>
                <fullName>Recommend Decline</fullName>
            </value>
            <value>
                <fullName>Manual Review Required</fullName>
            </value>
            <value>
                <fullName>Information Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>